Bug fix for hamburger icon on Safari

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -154,6 +154,8 @@ h2 {
         color: $primary-font-color;
         width: 48px;
         height: 48px;
+        min-width: 48px;
+        min-height: 48px;
         margin-left: 12px;
         flex-shrink: 0;
         border-radius: 6px;
