--- a/styles/style.css
+++ b/styles/style.css
@@ -496,6 +496,8 @@ h2 {
     color: #4c4c4c;
     width: 48px;
     height: 48px;
+    min-width: 48px;
+    min-height: 48px;
     margin-left: 12px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
